<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Work Arena</string>


    <!-- Sign in .xml -->
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="fullname">Full Name</string>
    <string name="phone">Phone No.</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="warn2">Already have an account ?</string>
    <string name="warn1">create your account</string>
    <string name="home_screen">Welcome Home Screen</string>

    <string name="email_required">e-mail is required</string>
    <string name="email_incorrect">not a correct e-mail</string>
    <string name="password_required">password is required</string>
    <string name="password_length">password is too short</string>


    <string name="fullname_required">full name is required</string>
    <string name="fullname_length">full name length is too large</string>
    <string name="phone_required">phone no. is required</string>
    <string name="phone_length">phone no. should be 11 digits </string>


    <string name="homeactivitywelcome">Welcome Home Activity</string>
    <string name="logout">Log Out</string>


    <string name="profile">Profile</string>
    <string name="portfolio">Portfolio</string>

    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>

    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_portfolio">Edit Portfolio</string>
    <string name="confirm">Confirm</string>


    <!-- Error Msg -->

    <string name="email_empty">email is required</string>
    <string name="email_wrong">email is wrong</string>
    <string name="fullname_empty">full name is required</string>
    <string name="country_empty">country is required</string>
    <string name="city_empty">city is required</string>
    <string name="phonenumber_empty">phone number is required</string>
    <string name="address_empty">address is required</string>
    <string name="phone_wrong">phone number is wrong</string>
    <string name="image_view">Image view</string>
    <string name="personal_info">Personal Information</string>
    <string name="company_empty">company name is required</string>
    <string name="profession_empty">profession is required</string>
    <string name="about_user_empty">write something about yourself</string>


    <!-- Components -->

    <string name="name">Full Name</string>
    <string name="pession">Profession</string>
    <string name="call">Call</string>
    <string name="description">About Your Self</string>
    <string name="value">Value :</string>
    <string name="condition">On</string>

    <!-- Portfolio -->

    <string name="upload_background_image">upload background image</string>
    <string name="upload_profile_image">upload profile image</string>
    <string name="about_yourself">about your self</string>
    <string name="company_name">Company Name</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="profession">Profession</string>
    <string name="update">update</string>
    <string name="empty">Empty</string>
    <string name="wait">wait</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="Count">7</string>
    <string name="minuts">Minuts</string>

    <!-- choose option -->
    <string name="profession_prompt">Choose Profession</string>
    <string-array name="profession_array">
        <item>Select Category</item>
        <item>Mechanic</item>
        <item>Plumber</item>
        <item>Gardner</item>
        <item>Carpenter</item>
    </string-array>


</resources>
