<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <EditText
        android:id="@+id/fullname_edittext"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:hint="@string/fullname"/>
    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signup"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/warn2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/warn1"
        android:textSize="18sp"/>

</LinearLayout>