<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <FrameLayout
        android:id="@+id/frame_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_marginTop="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"/>


    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/profilepic_profile1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/person_black_18dp"
        android:contentDescription="@string/image_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/fullname_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_name"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/email_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_mail"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/country_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_country"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/city_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_city"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/address_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/street_address"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="text"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_city"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/phone_profile1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:inputType="phone"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_phone"
            android:drawablePadding="10dp"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:fontFamily="@font/harngton"
                android:textSize="15sp"
                android:padding="10dp"/>
            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:fontFamily="@font/harngton"
                android:textSize="15sp"
                android:padding="10dp"/>

        </RadioGroup>

        <Button
            android:id="@+id/confirm_profile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:fontFamily="@font/harngton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>

    </ScrollView>

</RelativeLayout>