<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <EditText
        android:id="@+id/portfolio_feedback_feedback"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:hint="@string/feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:inputType="textMultiLine"
        android:autofillHints="@string/confirm"
        android:fontFamily="@font/harngton"

        android:gravity="top|left"
        android:minLines="3"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:backgroundTint="@color/full_dark"
        android:textCursorDrawable="@drawable/black_cursor"/>

    <Button
        android:id="@+id/portfolio_feedback_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:fontFamily="@font/harngton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>



</android.support.constraint.ConstraintLayout>