<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/portfolio_description_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/portfolio_description_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="185dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="178dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/portfolio_description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/portfolio_description_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>