<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fram_progress_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_gravity="center_horizontal"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/harngton"
            android:drawableStart="@drawable/ic_action_mail"
            android:drawablePadding="20dp"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:fontFamily="@font/harngton"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_action_password"
            android:drawablePadding="20dp"/>
        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signin"
            android:fontFamily="@font/harngton"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/warn1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/warn1"
            android:fontFamily="@font/harngton"
            android:textSize="18sp"/>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>