<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/frag_prof_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/fullname"/>

                <TextView
                    android:id="@+id/frag_prof_fullname"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/frag_prof_email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/country"/>

                <TextView
                    android:id="@+id/frag_prof_country"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/city"/>

                <TextView
                    android:id="@+id/frag_prof_city"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/street_address"/>

                <TextView
                    android:id="@+id/frag_prof_address"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/gender"/>

                <TextView
                    android:id="@+id/frag_prof_gender"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/confirm"/>


            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

            <Button
                android:id="@+id/frag_prof_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </TableRow>


    </TableLayout>

    </ScrollView>

</RelativeLayout>